--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 19 16:09:17 EET 2020
+#Thu Nov 19 21:07:11 EET 2020
 ndk.dir=C\:\\Users\\youss\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\nolov\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Mostafa\\AppData\\Local\\Android\\Sdk
